--- a/package.json
+++ b/package.json
@@ -67,5 +67,14 @@
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
+  "overrides": {
+    "react-native-ios-context-menu": {
+      "react-native-ios-utilities": "4.5.3"
+    },
+    "zeego": {
+      "react-native-ios-context-menu": "^2.5.1",
+      "react-native-ios-utilities": "4.5.3"
+    }
+  },
   "private": true
 }
