--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-sse": "^1.2.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "zeego": "^1.10.0"
   },
@@ -66,6 +68,15 @@
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "react-native-ios-context-menu": {
+      "react-native-ios-utilities": "4.5.3"
+    },
+    "zeego": {
+      "react-native-ios-context-menu": "^2.5.1",
+      "react-native-ios-utilities": "4.5.3"
+    }
   },
   "private": true
 }
